# xnat-uploader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  matcher.py  recipe.py  requirements.txt  setup.cfg  xnat-uploader.py  xnatuploader.py
.github/workflows/: linting.yml  pytest.yml
scripts/: anonymise_demo.py  check_ls.py  check_scan_id_uniques.py  create_scans.py  nested_progress.py  scan_dicoms.py  set_dates.py  start_xnat.py  stop_xnat.py
src/: xnatuploader.py
src/xnatuploader/: dicoms.py  matcher.py  put.py  upload.py  workbook.py  xnatuploader.py
tests/: conftest.py  test_config.py  test_matcher.py  test_scan.py  test_upload.py  test_xnat.py  utils.py
tests/fixtures/: basic_init.xlsx  basic_scanned.xlsx  config.json  config_bad_paths.json  config_basic.json  dose_info_scanned.xlsx  log.csv  log.xlsx  recipe-example.json  recipe-example.txt  recipe-xnat.json  scanned.xlsx  secret_pdf_scanned.xlsx  template.xlsx
tests/fixtures/bad_paths/emilyrae-10002/20220112/Has,a,Comma/: image-00201.dcm
tests/fixtures/bad_paths/emilyrae-10002/20220112/Has_a_(Parenthesis)/: image-00201.dcm
tests/fixtures/basic/DOE^JOHN-002304/20200312/Head CT/: scan2.dcm
tests/fixtures/basic/DOE^JOHN-002304/20200312HeadCT/Head CT/: image-00000.dcm  image-00002.extra.periods.dcm
tests/fixtures/basic/DOE^JOHN-002304/20200312HeadCT/Neck CT/: image-00001.dcm  image-00002.dcm
tests/fixtures/source/NomatchDir/: no_match_file.txt
tests/fixtures/source/ROE^JANE-397829/: 20200623-scan1.dcm  20210414-scan1.dcm
tests/fixtures/source/Smith^John-038945/: 20200303-scan1.dcm
(+13 files in other folders)
