[metadata]
name = xnatuploader
version = 1.0.1
author = Mike Lynch
author_email = m.lynch@sydney.edu.au
description = CLI tool for uploading multiple files to XNAT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SydneyInformaticsHub/xnatuploader
project_urls =
    Bug Tracker = https://github.com/SydneyInformaticsHub/xnatuploader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
install_requires =
	xnatutils
	openpyxl >= 3.0.10
    pydicom >= 2.3.0
    tqdm
    click

[options.extras_require]
test = 
    pytest
    xnat4tests >= 0.3.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	xnatuploader = xnatuploader.xnatuploader:main

[flake8]
ignore = E501, W503, E203

[tool:pytest]
pythonpath = src
log_cli = False
log_cli_level = INFO
norecursedirs = .git search __pycache__
